--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -54,9 +54,9 @@
 <div class="container">
     <section id="personal-details">
         <h2>Personal Details</h2>
-        <p><strong>Name:</strong> [Your Name]</p>
-        <p><strong>SRN:</strong> [Your SRN]</p>
-        <p><strong>Division:</strong> [Your Division]</p>
+        <p><strong>Name:</strong> [Rohan Suryavanshi]</p>
+        <p><strong>SRN:</strong> [02FE23BCS039]</p>
+        <p><strong>Division:</strong> [B]</p>
     </section>
 
     <section id="projects">
@@ -64,19 +64,14 @@
 
         <!-- Repeat this block for each project -->
         <div class="project">
-            <h3>Project Title: [Project 1 Title]</h3>
-            <p><strong>Description:</strong> [Brief description of Project 1]</p>
-            <p><strong>Technologies Used:</strong> [Technologies for Project 1]</p>
-            <p><strong>Role:</strong> [Your role in Project 1]</p>
+            <h3>Project Title: [MILITARY LOGISTICS AND SUPPLY CHAIN]</h3>
+            <p><strong>Description:</strong> [Build a smart application for supply chain]</p>
+            <p><strong>Technologies Used:</strong> [Data Structures and Algorithms,C++,HTML,CSS]</p>
+            <p><strong>Role:</strong> [Deployed Supply chian modules]</p>
             <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
         </div>
 
-        <div class="project">
-            <h3>Project Title: [Project 2 Title]</h3>
-            <p><strong>Description:</strong> [Brief description of Project 2]</p>
-            <p><strong>Technologies Used:</strong> [Technologies for Project 2]</p>
-            <p><strong>Role:</strong> [Your role in Project 2]</p>
-            <p><strong>Link:</strong> <a href="[Project 2 Link]" target="_blank">View Project</a></p>
+       
         </div>
         <!-- End of block -->
 
@@ -84,7 +79,7 @@
 </div>
 
 <footer class="footer">
-    <p>&copy; [Your Name]. All Rights Reserved.</p>
+    <p>&copy; [ROHAN SURYAVANSHI]. All Rights Reserved.</p>
 </footer>
 
 </body>
