--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -54,8 +54,8 @@
 <div class="container">
     <section id="personal-details">
         <h2>Personal Details</h2>
-        <p><strong>Name:</strong> [Rohan Suryavanshi]</p>
-        <p><strong>SRN:</strong> [02FE23BCS039]</p>
+        <p><strong>Name:</strong> Rohan Suryavanshi</p>
+        <p><strong>SRN:</strong> 02FE23BCS039</p>
         <p><strong>Division:</strong> [B]</p>
     </section>
 
@@ -64,10 +64,10 @@
 
         <!-- Repeat this block for each project -->
         <div class="project">
-            <h3>Project Title: [MILITARY LOGISTICS AND SUPPLY CHAIN]</h3>
-            <p><strong>Description:</strong> [Build a smart application for supply chain]</p>
-            <p><strong>Technologies Used:</strong> [Data Structures and Algorithms,C++,HTML,CSS]</p>
-            <p><strong>Role:</strong> [Deployed Supply chian modules]</p>
+            <h3>Project Title: MILITARY LOGISTICS AND SUPPLY CHAIN</h3>
+            <p><strong>Description:</strong> Build a smart application for supply chain</p>
+            <p><strong>Technologies Used:</strong> Data Structures and Algorithms,C++,HTML,CSS</p>
+            <p><strong>Role:</strong> Deployed Supply chian modules</p>
             <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
         </div>
 
@@ -79,7 +79,7 @@
 </div>
 
 <footer class="footer">
-    <p>&copy; [ROHAN SURYAVANSHI]. All Rights Reserved.</p>
+    <p>&copy; ROHAN SURYAVANSHI. All Rights Reserved.</p>
 </footer>
 
 </body>
