--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -9,10 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #e8f1fc;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
             padding: 20px 10px;
             text-align: center;
@@ -22,26 +22,38 @@
             max-width: 800px;
             margin: auto;
             background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
         h1, h2, h3 {
-            color: #333;
+            color: #0056b3;
         }
         .project {
             margin-bottom: 20px;
             padding: 15px;
-            border: 1px solid #ddd;
+            border: 1px solid #cce5ff;
             border-radius: 5px;
-            background-color: #f9f9f9;
+            background-color: #f8faff;
+        }
+        .project h3 {
+            margin-top: 0;
         }
         .footer {
             text-align: center;
-            padding: 10px;
-            background-color: #4CAF50;
+            padding: 15px;
+            background-color: #0056b3;
             color: white;
             position: fixed;
             bottom: 0;
             width: 100%;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -56,7 +68,7 @@
         <h2>Personal Details</h2>
         <p><strong>Name:</strong> Rohan Suryavanshi</p>
         <p><strong>SRN:</strong> 02FE23BCS039</p>
-        <p><strong>Division:</strong> [B]</p>
+        <p><strong>Division:</strong> B</p>
     </section>
 
     <section id="projects">
@@ -65,15 +77,11 @@
         <!-- Repeat this block for each project -->
         <div class="project">
             <h3>Project Title: MILITARY LOGISTICS AND SUPPLY CHAIN</h3>
-            <p><strong>Description:</strong> Build a smart application for supply chain</p>
-            <p><strong>Technologies Used:</strong> Data Structures and Algorithms,C++,HTML,CSS</p>
-            <p><strong>Role:</strong> Deployed Supply chian modules</p>
+            <p><strong>Description:</strong> Build a smart application for supply chain.</p>
+            <p><strong>Technologies Used:</strong> Data Structures and Algorithms, C++, HTML, CSS</p>
+            <p><strong>Role:</strong> Deployed Supply chain modules</p>
             <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
         </div>
-
-       
-        </div>
-        <!-- End of block -->
 
     </section>
 </div>
