--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #e8f1fc;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
             padding: 20px 10px;
             text-align: center;
@@ -22,26 +22,38 @@
             max-width: 800px;
             margin: auto;
             background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
         h1, h2, h3 {
-            color: #333;
+            color: #0056b3;
         }
         .project {
             margin-bottom: 20px;
             padding: 15px;
-            border: 1px solid #ddd;
+            border: 1px solid #cce5ff;
             border-radius: 5px;
-            background-color: #f9f9f9;
+            background-color: #f8faff;
+        }
+        .project h3 {
+            margin-top: 0;
         }
         .footer {
             text-align: center;
-            padding: 10px;
-            background-color: #4CAF50;
+            padding: 15px;
+            background-color: #0056b3;
             color: white;
             position: fixed;
             bottom: 0;
             width: 100%;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -54,9 +66,11 @@
 <div class="container">
     <section id="personal-details">
         <h2>Personal Details</h2>
-        <p><strong>Name:</strong> [Your Name]</p>
-        <p><strong>SRN:</strong> [Your SRN]</p>
-        <p><strong>Division:</strong> [Your Division]</p>
+        <p><strong>Name:</strong> Rohan Suryavanshi</p>
+        <p><strong>SRN:</strong> 02FE23BCS039</p>
+        <p><strong>Division:</strong> B</p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
+        <p><strong>Contact:</strong> +91 9876543210</p>
     </section>
 
     <section id="projects">
@@ -64,27 +78,18 @@
 
         <!-- Repeat this block for each project -->
         <div class="project">
-            <h3>Project Title: [Project 1 Title]</h3>
-            <p><strong>Description:</strong> [Brief description of Project 1]</p>
-            <p><strong>Technologies Used:</strong> [Technologies for Project 1]</p>
-            <p><strong>Role:</strong> [Your role in Project 1]</p>
+            <h3>Project Title: MILITARY LOGISTICS AND SUPPLY CHAIN</h3>
+            <p><strong>Description:</strong> Build a smart application for supply chain.</p>
+            <p><strong>Technologies Used:</strong> Data Structures and Algorithms, C++, HTML, CSS</p>
+            <p><strong>Role:</strong> Deployed Supply chain modules</p>
             <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
         </div>
-
-        <div class="project">
-            <h3>Project Title: [Project 2 Title]</h3>
-            <p><strong>Description:</strong> [Brief description of Project 2]</p>
-            <p><strong>Technologies Used:</strong> [Technologies for Project 2]</p>
-            <p><strong>Role:</strong> [Your role in Project 2]</p>
-            <p><strong>Link:</strong> <a href="[Project 2 Link]" target="_blank">View Project</a></p>
-        </div>
-        <!-- End of block -->
 
     </section>
 </div>
 
 <footer class="footer">
-    <p>&copy; [Your Name]. All Rights Reserved.</p>
+    <p>&copy; ROHAN SURYAVANSHI. All Rights Reserved.</p>
 </footer>
 
 </body>
