--- a/index.html
+++ b/index.html
@@ -17,13 +17,28 @@
             padding: 20px 10px;
             text-align: center;
         }
-        .container {
+        .main-content {
+            display: flex;
+            flex-wrap: wrap;
             padding: 20px;
-            max-width: 800px;
+            gap: 20px;
+            max-width: 1200px;
             margin: auto;
+        }
+        .container {
+            flex: 2;
             background: white;
+            padding: 20px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
+        }
+        .code-file {
+            flex: 1;
+            background: #f8faff;
+            padding: 20px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            height: fit-content;
         }
         h1, h2, h3 {
             color: #0056b3;
@@ -55,6 +70,14 @@
         a:hover {
             text-decoration: underline;
         }
+        pre {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+            font-size: 0.9em;
+            line-height: 1.5;
+        }
     </style>
 </head>
 <body>
@@ -63,29 +86,45 @@
     <h1>Project Portfolio</h1>
 </header>
 
-<div class="container">
-    <section id="personal-details">
-        <h2>Personal Details</h2>
-        <p><strong>Name:</strong> Rohan Suryavanshi</p>
-        <p><strong>SRN:</strong> 02FE23BCS039</p>
-        <p><strong>Division:</strong> B</p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
-        <p><strong>Contact:</strong> +91 9876543210</p>
-    </section>
+<div class="main-content">
+    <div class="container">
+        <section id="personal-details">
+            <h2>Personal Details</h2>
+            <p><strong>Name:</strong> Rohan Suryavanshi</p>
+            <p><strong>SRN:</strong> 02FE23BCS039</p>
+            <p><strong>Division:</strong> B</p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
+            <p><strong>Contact:</strong> +91 9876543210</p>
+        </section>
 
-    <section id="projects">
-        <h2>Project Details</h2>
+        <section id="projects">
+            <h2>Project Details</h2>
 
-        <!-- Repeat this block for each project -->
-        <div class="project">
-            <h3>Project Title: MILITARY LOGISTICS AND SUPPLY CHAIN</h3>
-            <p><strong>Description:</strong> Build a smart application for supply chain.</p>
-            <p><strong>Technologies Used:</strong> Data Structures and Algorithms, C++, HTML, CSS</p>
-            <p><strong>Role:</strong> Deployed Supply chain modules</p>
-            <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
-        </div>
+            <div class="project">
+                <h3>Project Title: MILITARY LOGISTICS AND SUPPLY CHAIN</h3>
+                <p><strong>Description:</strong> Build a smart application for supply chain.</p>
+                <p><strong>Technologies Used:</strong> Data Structures and Algorithms, C++, HTML, CSS</p>
+                <p><strong>Role:</strong> Deployed Supply chain modules</p>
+                <p><strong>Link:</strong> <a href="[Project 1 Link]" target="_blank">View Project</a></p>
+            </div>
+        </section>
+    </div>
 
-    </section>
+    <div class="code-file">
+        <h2>Code Snippet</h2>
+        <pre>
+<code>
+// Example code snippet
+#include &lt;iostream&gt;
+using namespace std;
+
+int main() {
+    cout << "Hello, World!" << endl;
+    return 0;
+}
+        </code>
+        </pre>
+    </div>
 </div>
 
 <footer class="footer">
