--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             padding: 20px 10px;
             text-align: center;
         }
+        header h1 {
+            color: #28a745; /* Green color */
+        }
         .main-content {
             display: flex;
             flex-wrap: wrap;
